--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,13 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.34.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>2.0.0-ALPHA</version>
+        </dependency>
+
     </dependencies>
 
 </project>
